--- a/css/box.css
+++ b/css/box.css
@@ -141,9 +141,9 @@
   #message.active0 {
     display: block;
     animation: 4s forwards;
-    animation-name: u7f70f2aa; }
+    animation-name: ua5b8c73d; }
 
-@keyframes u7f70f2aa {
+@keyframes ua5b8c73d {
   0% {
     opacity: 0; }
   20% {
@@ -156,9 +156,9 @@
   #message.active1 {
     display: block;
     animation: 4s forwards;
-    animation-name: u417e145a; }
+    animation-name: u735c4645; }
 
-@keyframes u417e145a {
+@keyframes u735c4645 {
   0% {
     opacity: 0; }
   20% {
