--- a/css/game.css
+++ b/css/game.css
@@ -62,39 +62,39 @@ body {
 
 li:nth-child(1) .character,
 li:nth-child(1) .click-area {
-  animation-duration: 1.42059s; }
+  animation-duration: 0.24685s; }
 
 li:nth-child(2) .character,
 li:nth-child(2) .click-area {
-  animation-duration: 0.08991s; }
+  animation-duration: 0.89335s; }
 
 li:nth-child(3) .character,
 li:nth-child(3) .click-area {
-  animation-duration: 0.17995s; }
+  animation-duration: 1.40888s; }
 
 li:nth-child(4) .character,
 li:nth-child(4) .click-area {
-  animation-duration: 1.47983s; }
+  animation-duration: 0.3884s; }
 
 li:nth-child(5) .character,
 li:nth-child(5) .click-area {
-  animation-duration: 1.26577s; }
+  animation-duration: 0.49227s; }
 
 li:nth-child(6) .character,
 li:nth-child(6) .click-area {
-  animation-duration: 1.46998s; }
+  animation-duration: 0.22875s; }
 
 li:nth-child(7) .character,
 li:nth-child(7) .click-area {
-  animation-duration: 1.09456s; }
+  animation-duration: 0.01915s; }
 
 li:nth-child(8) .character,
 li:nth-child(8) .click-area {
-  animation-duration: 0.35485s; }
+  animation-duration: 0.77455s; }
 
 li:nth-child(9) .character,
 li:nth-child(9) .click-area {
-  animation-duration: 0.85328s; }
+  animation-duration: 1.45292s; }
 
 .stopper {
   width: 100vw;
@@ -257,7 +257,7 @@ h2 {
 
 @keyframes bang {
   to {
-    box-shadow: 42px -393.66667px lime, 130px -55.66667px #ffee00, -90px -270.66667px #73ff00, -174px -107.66667px #bbff00, 161px -251.66667px #00aeff, 128px -202.66667px #0dff00, 62px -189.66667px #ff00e1, 171px -299.66667px #ff9100, -233px -394.66667px #15ff00, -16px -245.66667px #003cff, -222px 37.33333px #ff00e6, 245px -109.66667px #3700ff, 0px -369.66667px #ff1e00, -96px -148.66667px #00ff59, 67px -337.66667px #ff001a, -230px -88.66667px #00e6ff, 238px -28.66667px #ffd000, -79px -186.66667px #00ff15, 170px -26.66667px #ff8800, 75px -26.66667px #ff8000, -30px -195.66667px #f700ff, 49px 61.33333px #8c00ff, 238px -278.66667px #ff006a, 213px -254.66667px #7bff00, -74px 81.33333px #0009ff, -13px -381.66667px #09ff00, -156px -260.66667px #7700ff, 168px -78.66667px #fbff00, -4px 1.33333px #8c00ff, 12px -160.66667px #d9ff00, 179px 53.33333px #ff0055, 85px -190.66667px #1a00ff, -147px -123.66667px #ffd500, -116px -157.66667px #9d00ff, -152px -235.66667px #ff00d9, 96px -175.66667px #ffbf00, -170px -104.66667px #00ff22, -19px -41.66667px #ff00e1, 146px -224.66667px #9dff00, -37px -190.66667px #00e1ff, 158px 35.33333px #4800ff, -98px -46.66667px #ff2200, 88px -355.66667px #51ff00, -21px -124.66667px #0059ff, -28px -384.66667px #59ff00, 171px -15.66667px #ff0004, 191px -150.66667px #5500ff, 194px -119.66667px #ff0d00, -155px 49.33333px #ff006f, 22px -5.66667px #6aff00, -144px -245.66667px #ff000d; } }
+    box-shadow: -35px -365.66667px #ff00d5, -143px -163.66667px #3300ff, -237px -302.66667px #8c00ff, -72px -161.66667px #00ff7b, 28px -330.66667px #00ffa2, -162px -398.66667px #00ff6a, 20px 58.33333px #ff3c00, 46px -172.66667px #00ffd5, 35px -362.66667px #0091ff, 58px 21.33333px #e100ff, 155px -410.66667px #00ffd5, 203px -306.66667px #1eff00, -201px -304.66667px #00ddff, 233px -39.66667px #ff0015, 123px -164.66667px #ff0004, -95px -1.66667px #ff0044, 74px -30.66667px #ff2200, -134px -85.66667px #002bff, -226px -260.66667px #00ff88, 120px -112.66667px #0015ff, 36px -244.66667px #8400ff, 101px -91.66667px #000dff, 174px -144.66667px #ddff00, 182px -165.66667px #ff7b00, -24px -189.66667px #2600ff, 43px -21.66667px #40ff00, 10px -374.66667px #11ff00, 162px -324.66667px #ff4d00, 77px 9.33333px #005eff, -214px -359.66667px #6f00ff, 189px -157.66667px #4d00ff, -246px -359.66667px #0077ff, 12px -375.66667px #00ff66, 135px -48.66667px #00bbff, 152px -406.66667px #fff700, 54px -263.66667px #002bff, -21px -383.66667px #ff0037, 100px -239.66667px #ff5e00, 176px -85.66667px #00ffa2, 209px -96.66667px #0066ff, -114px -132.66667px #ff9d00, -248px -357.66667px #004dff, -170px 21.33333px #00ff26, -160px 72.33333px #ff00ae, 126px 50.33333px #0dff00, 143px -184.66667px #ff1100, 191px -269.66667px #ff6f00, 114px -71.66667px #3cff00, -197px -186.66667px cyan, -244px -49.66667px magenta, 123px -78.66667px #ff4000; } }
 
 @keyframes gravity {
   to {
