update the pages

--- a/css/box.css
+++ b/css/box.css
@@ -141,9 +141,9 @@
   #message.active0 {
     display: block;
     animation: 4s forwards;
-    animation-name: ua5b8c73d; }
+    animation-name: u2b3fadd6; }
 
-@keyframes ua5b8c73d {
+@keyframes u2b3fadd6 {
   0% {
     opacity: 0; }
   20% {
@@ -156,9 +156,9 @@
   #message.active1 {
     display: block;
     animation: 4s forwards;
-    animation-name: u735c4645; }
+    animation-name: uf4a49a4d; }
 
-@keyframes u735c4645 {
+@keyframes uf4a49a4d {
   0% {
     opacity: 0; }
   20% {
