--- a/sass/Tool.scss
+++ b/sass/Tool.scss
@@ -1,6 +1,6 @@
 @charset "utf-8";
 @import "image.sass";
-@import "tool/color.sass";
+@import "tool/color";
 @import "tool/layout";
 
 *{
@@ -38,12 +38,8 @@
     }
 }
 @mixin Box(){
-    border : 1px solid black;
+    border : 1px solid gray;
 }
-@mixin RandomColor(){
-    background: #3db;
-}
-
 @mixin Center($per){
     width: $per;
     @if($per*0 != 0%){
