svg builder.html

--- a/css/box.css
+++ b/css/box.css
@@ -141,9 +141,9 @@
   #message.active0 {
     display: block;
     animation: 4s forwards;
-    animation-name: u2b3fadd6; }
+    animation-name: ud1b5a88c; }
 
-@keyframes u2b3fadd6 {
+@keyframes ud1b5a88c {
   0% {
     opacity: 0; }
   20% {
@@ -156,9 +156,9 @@
   #message.active1 {
     display: block;
     animation: 4s forwards;
-    animation-name: uf4a49a4d; }
+    animation-name: uc1fe4604; }
 
-@keyframes uf4a49a4d {
+@keyframes uc1fe4604 {
   0% {
     opacity: 0; }
   20% {
