--- a/css/game.css
+++ b/css/game.css
@@ -62,39 +62,39 @@ body {
 
 li:nth-child(1) .character,
 li:nth-child(1) .click-area {
-  animation-duration: 1.37555s; }
+  animation-duration: 0.58295s; }
 
 li:nth-child(2) .character,
 li:nth-child(2) .click-area {
-  animation-duration: 0.6293s; }
+  animation-duration: 0.41423s; }
 
 li:nth-child(3) .character,
 li:nth-child(3) .click-area {
-  animation-duration: 0.90744s; }
+  animation-duration: 1.41206s; }
 
 li:nth-child(4) .character,
 li:nth-child(4) .click-area {
-  animation-duration: 0.35681s; }
+  animation-duration: 0.61086s; }
 
 li:nth-child(5) .character,
 li:nth-child(5) .click-area {
-  animation-duration: 0.6414s; }
+  animation-duration: 1.0558s; }
 
 li:nth-child(6) .character,
 li:nth-child(6) .click-area {
-  animation-duration: 0.01549s; }
+  animation-duration: 1.11587s; }
 
 li:nth-child(7) .character,
 li:nth-child(7) .click-area {
-  animation-duration: 1.44861s; }
+  animation-duration: 0.06964s; }
 
 li:nth-child(8) .character,
 li:nth-child(8) .click-area {
-  animation-duration: 1.32992s; }
+  animation-duration: 0.43181s; }
 
 li:nth-child(9) .character,
 li:nth-child(9) .click-area {
-  animation-duration: 0.6119s; }
+  animation-duration: 0.99506s; }
 
 .stopper {
   width: 100vw;
@@ -257,7 +257,7 @@ h2 {
 
 @keyframes bang {
   to {
-    box-shadow: -53px -379.66667px #44ff00, 58px -96.66667px #9dff00, 71px -162.66667px #00ff59, -241px -96.66667px #009dff, 17px -299.66667px #ff5900, 101px 11.33333px #ffc800, -6px 65.33333px #00ff0d, 120px -380.66667px #ff006a, 166px -190.66667px #ffc400, -90px -275.66667px #5900ff, 63px 27.33333px #ff0040, -245px -187.66667px #0077ff, -78px -254.66667px #ffa600, 65px -316.66667px #00ffe6, 143px -217.66667px #0026ff, 30px -2.66667px #ff8000, -145px -158.66667px #6a00ff, 224px -272.66667px #1a00ff, -92px -206.66667px #00d9ff, 155px -287.66667px #4400ff, -193px -82.66667px #002bff, -211px -187.66667px #ff0066, 133px -264.66667px #95ff00, 141px -369.66667px #6600ff, 231px -391.66667px #ff6600, -83px -52.66667px #8800ff, 111px -377.66667px #00eeff, -18px 47.33333px #ff003c, -15px -352.66667px #00ff3c, -174px -372.66667px #7bff00, 89px -326.66667px #ff00c4, -4px -137.66667px #4dff00, 192px 65.33333px #bf00ff, -211px -302.66667px #e100ff, 153px -326.66667px #a6ff00, -70px -59.66667px #0048ff, -46px -138.66667px #ffcc00, 67px -245.66667px #88ff00, -208px -192.66667px #00ff9d, 167px 1.33333px #00e1ff, 157px -180.66667px #ff4800, 128px -287.66667px #1eff00, 159px -225.66667px #00ff2f, 169px -230.66667px #00ff40, -212px -271.66667px #1aff00, 78px -261.66667px #ff004d, 124px -18.66667px #aa00ff, 189px -243.66667px #0037ff, -33px -389.66667px #0033ff, 179px 52.33333px #ff3c00, -6px -199.66667px deepskyblue; } }
+    box-shadow: 222px -98.66667px #eeff00, 211px -368.66667px #ffcc00, 127px -153.66667px #00ff11, -79px 8.33333px #ff3300, 207px -377.66667px #001aff, -212px -229.66667px #00ffb3, 10px -67.66667px #ffd500, 157px -331.66667px #2fff00, -221px 14.33333px #00d9ff, -32px -368.66667px #40ff00, -116px -85.66667px #2bff00, 53px -39.66667px #ff0084, 97px -105.66667px #1eff00, -87px -98.66667px #ffd500, 148px -187.66667px #2f00ff, -202px 76.33333px #0051ff, -122px -90.66667px #00ff26, 94px -249.66667px #00ffbb, 147px -412.66667px darkorange, -96px -38.66667px #aeff00, -165px 40.33333px #00ff8c, -5px -139.66667px #a6ff00, -21px -415.66667px #ff8000, -13px -209.66667px #00ffd9, -106px -287.66667px #0015ff, 80px -10.66667px #6600ff, -55px 41.33333px #aa00ff, -32px -307.66667px #ff0099, -212px -8.66667px #80ff00, 227px -283.66667px #44ff00, -33px -305.66667px #cc00ff, 218px -105.66667px #ff0011, 141px -116.66667px #5100ff, 148px 33.33333px #001eff, 104px 23.33333px #ffb300, 136px -24.66667px #d5ff00, -176px -314.66667px #33ff00, 50px -13.66667px #ffbb00, 126px -239.66667px #ff0088, 96px -112.66667px red, -223px -365.66667px #9100ff, -30px 70.33333px #ff00f2, 242px -145.66667px #00fff7, -13px -49.66667px #0059ff, 55px 53.33333px #5500ff, -207px -407.66667px #00d5ff, -24px -139.66667px #e6ff00, -30px -328.66667px #0077ff, -149px -140.66667px #ff000d, -21px -126.66667px #0099ff, 232px -287.66667px #f700ff; } }
 
 @keyframes gravity {
   to {
