--- a/css/box.css
+++ b/css/box.css
@@ -74,10 +74,8 @@
   height: 30px;
   border-radius: 50%;
   box-shadow: 0 0 5px lightgray; }
-
 #wturnqi.bai {
   background: white; }
-
 #wturnqi.hei {
   background: black; }
 
@@ -141,9 +139,8 @@
   #message.active0 {
     display: block;
     animation: 4s forwards;
-    animation-name: ud1b5a88c; }
-
-@keyframes ud1b5a88c {
+    animation-name: u6p4l8953; }
+@keyframes u6p4l8953 {
   0% {
     opacity: 0; }
   20% {
@@ -156,9 +153,8 @@
   #message.active1 {
     display: block;
     animation: 4s forwards;
-    animation-name: uc1fe4604; }
-
-@keyframes uc1fe4604 {
+    animation-name: u6p4l895c; }
+@keyframes u6p4l895c {
   0% {
     opacity: 0; }
   20% {
@@ -204,7 +200,6 @@
   to {
     opacity: 1;
     transform: scale 1.3; } }
-
 #msg {
   width: 300px;
   height: 560px;
@@ -253,7 +248,7 @@ body {
   height: 355px;
   background: #edede0; }
 
-/*div{
+    /*div{
 				background: rgba(123,123,123,0.3);
 			}*/
 .wap hr {
@@ -381,3 +376,5 @@ td {
 .divnode {
   height: 20px;
   width: 20px; }
+
+/*# sourceMappingURL=box.css.map */
