--- a/css/display.css
+++ b/css/display.css
@@ -45,10 +45,8 @@ nav {
     height: calc(100% - 40px);
     margin: 20px 20px;
     display: inline-block; }
-
 .content .td {
   display: inline-block; }
-
 .content .tr {
   width: 80%;
   margin: 0 5%;
@@ -60,13 +58,30 @@ nav {
     color: black;
     text-underline-position: 4px;
     text-decoration: none;
+    width: 100%;
+    height: 100%;
     padding: 10px;
     cursor: pointer;
     transition: all 0.3s;
     box-shadow: 0 0 1px gray;
-    border-radius: 5px; }
-    .content .tr .onep:hover {
-      box-shadow: 0 0 1px gray, 0 0 6px #32BBDD; }
+    border-radius: 5px;
+    position: relative;
+    background: white; }
+    .content .tr .onep::before {
+      border-radius: 5px;
+      box-shadow: 0 0 1px gray, 0 0 8px #32BBDD;
+      content: "";
+      display: inline-block;
+      width: 100%;
+      height: 100%;
+      transform: scale(0.9);
+      transition: all 0.3s;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: -1; }
+    .content .tr .onep:hover::before {
+      transform: scale(1); }
     .content .tr .onep > iframe {
       position: absolute;
       top: 0px;
@@ -75,3 +90,5 @@ nav {
       height: 100%;
       zoom: 20%;
       transform: scale(0.2); }
+
+/*# sourceMappingURL=display.css.map */
