--- a/css/game.css
+++ b/css/game.css
@@ -62,39 +62,39 @@ body {
 
 li:nth-child(1) .character,
 li:nth-child(1) .click-area {
-  animation-duration: 0.58295s; }
+  animation-duration: 0.59595s; }
 
 li:nth-child(2) .character,
 li:nth-child(2) .click-area {
-  animation-duration: 0.41423s; }
+  animation-duration: 1.24927s; }
 
 li:nth-child(3) .character,
 li:nth-child(3) .click-area {
-  animation-duration: 1.41206s; }
+  animation-duration: 0.63741s; }
 
 li:nth-child(4) .character,
 li:nth-child(4) .click-area {
-  animation-duration: 0.61086s; }
+  animation-duration: 1.29246s; }
 
 li:nth-child(5) .character,
 li:nth-child(5) .click-area {
-  animation-duration: 1.0558s; }
+  animation-duration: 1.19535s; }
 
 li:nth-child(6) .character,
 li:nth-child(6) .click-area {
-  animation-duration: 1.11587s; }
+  animation-duration: 0.39191s; }
 
 li:nth-child(7) .character,
 li:nth-child(7) .click-area {
-  animation-duration: 0.06964s; }
+  animation-duration: 1.41633s; }
 
 li:nth-child(8) .character,
 li:nth-child(8) .click-area {
-  animation-duration: 0.43181s; }
+  animation-duration: 0.86744s; }
 
 li:nth-child(9) .character,
 li:nth-child(9) .click-area {
-  animation-duration: 0.99506s; }
+  animation-duration: 0.19569s; }
 
 .stopper {
   width: 100vw;
@@ -257,7 +257,7 @@ h2 {
 
 @keyframes bang {
   to {
-    box-shadow: 222px -98.66667px #eeff00, 211px -368.66667px #ffcc00, 127px -153.66667px #00ff11, -79px 8.33333px #ff3300, 207px -377.66667px #001aff, -212px -229.66667px #00ffb3, 10px -67.66667px #ffd500, 157px -331.66667px #2fff00, -221px 14.33333px #00d9ff, -32px -368.66667px #40ff00, -116px -85.66667px #2bff00, 53px -39.66667px #ff0084, 97px -105.66667px #1eff00, -87px -98.66667px #ffd500, 148px -187.66667px #2f00ff, -202px 76.33333px #0051ff, -122px -90.66667px #00ff26, 94px -249.66667px #00ffbb, 147px -412.66667px darkorange, -96px -38.66667px #aeff00, -165px 40.33333px #00ff8c, -5px -139.66667px #a6ff00, -21px -415.66667px #ff8000, -13px -209.66667px #00ffd9, -106px -287.66667px #0015ff, 80px -10.66667px #6600ff, -55px 41.33333px #aa00ff, -32px -307.66667px #ff0099, -212px -8.66667px #80ff00, 227px -283.66667px #44ff00, -33px -305.66667px #cc00ff, 218px -105.66667px #ff0011, 141px -116.66667px #5100ff, 148px 33.33333px #001eff, 104px 23.33333px #ffb300, 136px -24.66667px #d5ff00, -176px -314.66667px #33ff00, 50px -13.66667px #ffbb00, 126px -239.66667px #ff0088, 96px -112.66667px red, -223px -365.66667px #9100ff, -30px 70.33333px #ff00f2, 242px -145.66667px #00fff7, -13px -49.66667px #0059ff, 55px 53.33333px #5500ff, -207px -407.66667px #00d5ff, -24px -139.66667px #e6ff00, -30px -328.66667px #0077ff, -149px -140.66667px #ff000d, -21px -126.66667px #0099ff, 232px -287.66667px #f700ff; } }
+    box-shadow: -99px -191.66667px #00f7ff, -24px -209.66667px #005eff, -164px -367.66667px #00ff59, -157px 75.33333px #ff3c00, -88px -273.66667px #d500ff, 143px -285.66667px #ff001e, 127px -174.66667px #2f00ff, 164px -193.66667px #00ff6a, -98px -321.66667px #7700ff, 60px -204.66667px #006fff, -207px -16.66667px #bbff00, -234px -273.66667px #b300ff, 222px -279.66667px #ff9100, 110px -188.66667px #00ffd0, -229px -288.66667px #00ffb3, 57px -161.66667px #11ff00, 105px -380.66667px #95ff00, -198px -189.66667px #ff5e00, 185px -347.66667px #c400ff, -76px -405.66667px #ffe100, -60px -223.66667px #bfff00, 92px -42.66667px #00a2ff, -164px -3.66667px #0059ff, -62px -101.66667px #0dff00, -49px -224.66667px #ff006f, 44px -9.66667px #4000ff, 128px -143.66667px #ccff00, -221px -163.66667px #8c00ff, -197px -11.66667px #00b7ff, -212px -219.66667px #3cff00, 18px -286.66667px #88ff00, -212px 3.33333px #d500ff, -195px -317.66667px #22ff00, -178px -39.66667px #00ff6a, -213px -8.66667px #00ffb7, -166px -127.66667px #eeff00, -22px 31.33333px #ff001e, -123px -154.66667px #1e00ff, 56px -266.66667px #ff9100, 208px -176.66667px #8c00ff, 85px 47.33333px #ff00e6, -234px 55.33333px #00ffdd, 108px -337.66667px #00ffd9, 44px -186.66667px #d000ff, -177px -2.66667px #fffb00, -17px -355.66667px #ffd900, -104px -232.66667px #0900ff, -69px -297.66667px #0044ff, -49px -145.66667px #0dff00, -61px -304.66667px #0400ff, 140px -47.66667px #00ffa6; } }
 
 @keyframes gravity {
   to {
