--- a/sass/tool/shape.scss
+++ b/sass/tool/shape.scss
@@ -1,3 +1,58 @@
+@charset "utf-8";
 %box{
     border:1px solid gray;
+}
+
+%underlineInput{
+    border: none;
+    padding: 0 5px 3px 5px;
+    font-size: 23px;
+    border-bottom: 2px solid hsl(196, 23%, 66%);
+    &:focus{
+        border-bottom: 2px solid hsl(196, 76%, 66%);
+    }
+    &:active{
+        border-bottom: 2px solid hsl(196, 23%, 66%);
+    }
+}
+
+// 去除浏览器的特殊样式
+@mixin Normalize(){
+    input,button{
+        outline: none;
+        padding:0;
+        margin: 0;
+        &:active,&:focus{
+            outline: none;
+        }
+    }
+    a.wrapA{
+        color:inherit;
+        text-decoration: none;
+    }
+}
+
+@mixin hoverShadow(){
+    position: relative;
+    background: white;
+    &::before{
+        @content;
+        content: "";
+        display: inline-block;
+        @include Square(100%);
+        transform: scale(0.9);
+        transition: all 0.3s;
+        position: absolute;
+        top:0;
+        left:0;
+        z-index: -1;
+    }
+    &:hover::before{
+        transform:scale(1);
+    }
+}
+
+%h3 {
+    display: inline-block;
+    font-size:25px; 
 }
